--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-scripts": "^5.0.1",
     "react-select": "^4.3.1",
     "swiper": "^6.7.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "axios": "^0.24.0",
+    "react-router-dom": "^6.2.1"
+    
   },
   "scripts": {
     "start": "react-scripts start",
