--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "jwt-decode": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
     "react-select": "^4.3.1",
     "swiper": "^6.7.0",
-    "web-vitals": "^1.1.2",
-    "axios": "^0.24.0",
-    "react-router-dom": "^6.2.1"
-    
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
